force-app/main/default/objects/Opportunity/fields/Amount_Gross__c.field-meta.xml
<CustomField>
    <fullName>Amount_Gross__c</fullName>
    <inlineHelpText>Amount before Credit Card Fees Etc</inlineHelpText>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>