force-app/main/default/objects/Opportunity/fields/Amount_Net__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net__c</fullName>
    <inlineHelpText>After Credit Card Fees</inlineHelpText>
    <label>Net Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>