force-app/main/default/objects/Opportunity/fields/Artist_Support__c.field-meta.xml
<CustomField>
    <fullName>Artist_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Artist Support</label>
    <type>Checkbox</type>
</CustomField>