force-app/main/default/objects/Opportunity/fields/C_P_CC_Expiration__c.field-meta.xml
<CustomField>
    <fullName>C_P_CC_Expiration__c</fullName>
    <formula>DATE(VALUE(Right(CnP_PaaS__CnP_OrderNumber__r.CnP_PaaS__CardExpiration__c,4)), 
VALUE(Left(CnP_PaaS__CnP_OrderNumber__r.CnP_PaaS__CardExpiration__c,2)), 
VALUE(MID(&apos;28&apos;,4,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C&amp;P CC Expiration date</label>
    <type>Date</type>
</CustomField>