force-app/main/default/objects/Opportunity/fields/C_P_Event_Registered_Attendee__c.field-meta.xml
<CustomField>
    <fullName>C_P_Event_Registered_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Event Registered Attendee</label>
    <referenceTo>CnP_PaaS_EVT__Event_attendee_session__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>