force-app/main/default/objects/Opportunity/fields/CASESAFEID_Id__c.field-meta.xml
<CustomField>
    <fullName>CASESAFEID_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASESAFEID(Id)</label>
    <type>Text</type>
</CustomField>