force-app/main/default/objects/Opportunity/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Program Services</fullName>
            </value>
            <value>
                <fullName>Supporting Services:Fundraising:Membership</fullName>
            </value>
            <value>
                <fullName>Supporting Services:Fundraising:Events</fullName>
            </value>
            <value>
                <fullName>Program Services:Fiscal Sponsorships</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Adv Screenings</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Art</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Best of Fest</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Childrens</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:CCSC</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Curation for Hire</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Design Matters</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:HBO</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Local Made in Utah</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Novel to Film</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Pioneer Park</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Special Events</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Special Events:Impact</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Special Events:Investing in Media that Matters</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Special Events:Sundance</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Special Events:US campaign</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Sport</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Visiting Artist</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:Westminster</fullName>
            </value>
            <value>
                <fullName>Program Services:Best of Fest, Film/makers:WGBH</fullName>
            </value>
            <value>
                <fullName>Program Services:Fests/Series</fullName>
            </value>
            <value>
                <fullName>Program Services:Fests/Series:Cultural</fullName>
            </value>
            <value>
                <fullName>Program Services:Fests/Series:Cultural:Chinese</fullName>
            </value>
            <value>
                <fullName>Program Services:Fests/Series:Cultural:Indian</fullName>
            </value>
            <value>
                <fullName>Program Services:Fests/Series:Cultural:International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>