force-app/main/default/objects/Opportunity/fields/CnP_Attendee_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_Attendee_Number__c</fullName>
    <inlineHelpText>Among all attendees from the transaction which generated this Opportunity, the number which identifies this attendee among the other Opportunities that may have been made (if greater than 1)</inlineHelpText>
    <label>CnP Attendee Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>