force-app/main/default/objects/Opportunity/fields/CnP_PaaS__Class__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Class</label>
    <referenceTo>CnP_PaaS__Class__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>