force-app/main/default/objects/Opportunity/fields/CnP_PaaS__CnP_Fundraiser_Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Fundraiser_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Fundraiser Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (C&amp;P Fundraiser Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>