force-app/main/default/objects/Opportunity/fields/CnP_PaaS__CnP_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Opportunity_Type__c</fullName>
    <label>C&amp;P Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Convenience Fee</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Chargeback Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>