force-app/main/default/objects/Opportunity/fields/CnP_PaaS__CnP_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Payment_Type__c</fullName>
    <label>C&amp;P Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>