force-app/main/default/objects/Opportunity/fields/CnP_PaaS__Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C&amp;P Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>