force-app/main/default/objects/Opportunity/fields/CnP_PaaS__Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Coupon_Code__c</fullName>
    <label>C&amp;P Coupon Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>