force-app/main/default/objects/Opportunity/fields/CnP_PaaS__IsPublicAccess__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__IsPublicAccess__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsPublicAccess</label>
    <type>Checkbox</type>
</CustomField>