force-app/main/default/objects/Opportunity/fields/CnP_PaaS__Opportunity_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Opportunity_Amount_Type__c</fullName>
    <label>C&amp;P Opportunity Amount Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>