force-app/main/default/objects/Opportunity/fields/CnP_PaaS__ReceiptNumber__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__ReceiptNumber__c</fullName>
    <label>C&amp;P Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>