force-app/main/default/objects/Opportunity/fields/CnP_PaaS__ReferenceID_GUID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__ReferenceID_GUID__c</fullName>
    <label>C&amp;P Payment ReferenceID/GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>