force-app/main/default/objects/Opportunity/fields/CnP_PaaS__Tax__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Tax__c</fullName>
    <label>C&amp;P Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>