force-app/main/default/objects/Opportunity/fields/CnP_PaaS_CnP_Recurring_Internval__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS_CnP_Recurring_Internval__c</fullName>
    <formula>TEXT(CnP_PaaS__C_P_Recurring__r.CnP_PaaS__Periodicity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C&amp;P Recurring Interval</label>
    <type>Text</type>
</CustomField>