force-app/main/default/objects/Opportunity/fields/CnP_PaaS_CnP_Recurring_Status__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS_CnP_Recurring_Status__c</fullName>
    <formula>CnP_PaaS__CnP_OrderNumber__r.CnP_PaaS__C_P_Recurring__r.CnP_PaaS__CnP_RecurringStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C&amp;P Recurring Status</label>
    <type>Text</type>
</CustomField>