force-app/main/default/objects/Opportunity/fields/CnP_PaaS_Recurring_Next_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS_Recurring_Next_Installment_Date__c</fullName>
    <formula>CnP_PaaS__C_P_Recurring__r.CnP_PaaS__NextInstallment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C&amp;P Recurring Next Installment Date</label>
    <type>Date</type>
</CustomField>