force-app/main/default/objects/Opportunity/fields/CnP_Total_Attendees__c.field-meta.xml
<CustomField>
    <fullName>CnP_Total_Attendees__c</fullName>
    <inlineHelpText>Total attendees per the transaction which generated this Opportunity.</inlineHelpText>
    <label>CnP Total Attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>