force-app/main/default/objects/Opportunity/fields/Damn_These_Heels_LGBTQ__c.field-meta.xml
<CustomField>
    <fullName>Damn_These_Heels_LGBTQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damn These Heels LGBTQ</label>
    <type>Checkbox</type>
</CustomField>