force-app/main/default/objects/Opportunity/fields/Donor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Donor_Comment__c</fullName>
    <description>From donation form.. &quot;What inspired you to make this donation?&quot;</description>
    <label>Donor Comment</label>
    <type>TextArea</type>
</CustomField>