force-app/main/default/objects/Opportunity/fields/Donor_Interests__c.field-meta.xml
<CustomField>
    <fullName>Donor_Interests__c</fullName>
    <label>Donor Interests:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Support</fullName>
            </value>
            <value>
                <fullName>Weekly Programming</fullName>
            </value>
            <value>
                <fullName>Damn These Heels LGBTQ</fullName>
            </value>
            <value>
                <fullName>Tumbleweeds for Kids</fullName>
            </value>
            <value>
                <fullName>Artist Support</fullName>
            </value>
            <value>
                <fullName>Media Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>