force-app/main/default/objects/Opportunity/fields/Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Event Attendee)</relationshipLabel>
    <relationshipName>Opportunities_as_Event_Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>