force-app/main/default/objects/Opportunity/fields/EventbriteSync__Buyer__c.field-meta.xml
<CustomField>
    <fullName>EventbriteSync__Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Buyer)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>