force-app/main/default/objects/Opportunity/fields/EventbriteSync__EventbriteId__c.field-meta.xml
<CustomField>
    <fullName>EventbriteSync__EventbriteId__c</fullName>
    <label>Eventbrite Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>