force-app/main/default/objects/Opportunity/fields/Fiscal_Sponsorship_Film__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship_Film__c</fullName>
    <label>Fiscal Sponsorship Film</label>
    <length>255</length>
    <type>Text</type>
</CustomField>