force-app/main/default/objects/Opportunity/fields/Fiscal_Sponsorship_Project_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship_Project_Campaign_ID__c</fullName>
    <formula>UtFC_Fiscal_Sponsor_Film__r.Related_Campaign_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Sponsorship Project Campaign ID</label>
    <type>Text</type>
</CustomField>