force-app/main/default/objects/Opportunity/fields/General_Support__c.field-meta.xml
<CustomField>
    <fullName>General_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Support</label>
    <type>Checkbox</type>
</CustomField>