force-app/main/default/objects/Opportunity/fields/Grant_Application_Submission_Format__c.field-meta.xml
<CustomField>
    <fullName>Grant_Application_Submission_Format__c</fullName>
    <label>Grant Application Submission Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Grants</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Mail-Hard Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>