force-app/main/default/objects/Opportunity/fields/Grant_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Grant_Requirements__c</fullName>
    <label>Grant Requirements</label>
    <type>Url</type>
</CustomField>