force-app/main/default/objects/Opportunity/fields/Hidden_Update_Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Update_Trigger_Field__c</fullName>
    <label>Hidden Update Trigger Field (2 character</label>
    <length>2</length>
    <type>Text</type>
</CustomField>