force-app/main/default/objects/Opportunity/fields/Honoree_Email__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Email__c</fullName>
    <label>Honoree Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>