force-app/main/default/objects/Opportunity/fields/Honoree_gift__c.field-meta.xml
<CustomField>
    <fullName>Honoree_gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this gift in honor of another person?</description>
    <inlineHelpText>Is this gift in honor of another person?</inlineHelpText>
    <label>Honoree gift?</label>
    <type>Checkbox</type>
</CustomField>