force-app/main/default/objects/Opportunity/fields/Invoice_Number_Foundry__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Foundry__c</fullName>
    <label>Invoice Number - Foundry</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>