force-app/main/default/objects/Opportunity/fields/kell01__All_Payments_Reversed__c.field-meta.xml
<CustomField>
    <fullName>kell01__All_Payments_Reversed__c</fullName>
    <formula>AND(npe01__Number_of_Payments__c &gt; 0, kell01__Number_of_Reversed_Payments__c = npe01__Number_of_Payments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Payments Reversed</label>
    <type>Checkbox</type>
</CustomField>