force-app/main/default/objects/Opportunity/fields/kell01__Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>kell01__Allocated_Amount__c</fullName>
    <label>Allocated Amount</label>
    <summarizedField>kell01__Allocation__c.kell01__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>kell01__Allocation__c.kell01__Reversed__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>kell01__Allocation__c.kell01__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>