force-app/main/default/objects/Opportunity/fields/kell01__Do_Not_Automatically_Create_Allocation__c.field-meta.xml
<CustomField>
    <fullName>kell01__Do_Not_Automatically_Create_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Automatically Create Allocation</label>
    <type>Checkbox</type>
</CustomField>