force-app/main/default/objects/Opportunity/fields/kell01__Household__c.field-meta.xml
<CustomField>
    <fullName>kell01__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assigned Automatically based on Household of the contact that is connected to the Account on the gift.</inlineHelpText>
    <label>Household</label>
    <referenceTo>npo02__Household__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>