force-app/main/default/objects/Opportunity/fields/kell01__Household_or_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>kell01__Household_or_Account_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Account.npe01__One2OneContact__r.npo02__Household__c)), Account.npe01__One2OneContact__r.npo02__Household__r.Name,
IF(NOT(ISBLANK(Account.npe01__One2OneContact__r.AccountId)), Account.npe01__One2OneContact__r.Account.Name,
Account.Name
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household or Account Name</label>
    <type>Text</type>
</CustomField>