force-app/main/default/objects/Opportunity/fields/kell01__Last_Reversed_Date__c.field-meta.xml
<CustomField>
    <fullName>kell01__Last_Reversed_Date__c</fullName>
    <label>Last Reversed Date</label>
    <summarizedField>npe01__OppPayment__c.kell01__Reversed_Date__c</summarizedField>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.kell01__Reversed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>