force-app/main/default/objects/Opportunity/fields/kell01__Number_of_Posted_Payments__c.field-meta.xml
<CustomField>
    <fullName>kell01__Number_of_Posted_Payments__c</fullName>
    <label>Number of Posted Payments</label>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.kell01__Posted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>