force-app/main/default/objects/Opportunity/fields/kell01__Opportunity_Posted__c.field-meta.xml
<CustomField>
    <fullName>kell01__Opportunity_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Posted</label>
    <type>Checkbox</type>
</CustomField>