force-app/main/default/objects/Opportunity/fields/kell01__Opportunity_Reversed__c.field-meta.xml
<CustomField>
    <fullName>kell01__Opportunity_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Reversed</label>
    <type>Checkbox</type>
</CustomField>