force-app/main/default/objects/Opportunity/fields/kell01__Opportunity_Reversed_Date__c.field-meta.xml
<CustomField>
    <fullName>kell01__Opportunity_Reversed_Date__c</fullName>
    <label>Opportunity Reversed Date</label>
    <type>DateTime</type>
</CustomField>