force-app/main/default/objects/Opportunity/fields/kell01__Primary_Fund__c.field-meta.xml
<CustomField>
    <fullName>kell01__Primary_Fund__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Assigned automatically based on allocations. The Fund with the highest percentage of the total gift amount.</inlineHelpText>
    <label>Primary Fund</label>
    <referenceTo>kell01__Fund__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>