force-app/main/default/objects/Opportunity/fields/Matching_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Amount__c</fullName>
    <label>Matching Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>