force-app/main/default/objects/Opportunity/fields/Media_Education__c.field-meta.xml
<CustomField>
    <fullName>Media_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Education</label>
    <type>Checkbox</type>
</CustomField>