force-app/main/default/objects/Opportunity/fields/NGOC_Giving_Frequency__c.field-meta.xml
<CustomField>
    <fullName>NGOC_Giving_Frequency__c</fullName>
    <label>NGOC Giving Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Payment</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>