force-app/main/default/objects/Opportunity/fields/NGOC_Giving_Type__c.field-meta.xml
<CustomField>
    <fullName>NGOC_Giving_Type__c</fullName>
    <label>NGOC Giving Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>