force-app/main/default/objects/Opportunity/fields/NGOC_Name__c.field-meta.xml
<CustomField>
    <fullName>NGOC_Name__c</fullName>
    <label>NGOC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>