force-app/main/default/objects/Opportunity/fields/Notice_of_Grant_Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Grant_Awarded_Date__c</fullName>
    <label>Notice of Grant Awarded Date</label>
    <type>Date</type>
</CustomField>