force-app/main/default/objects/Opportunity/fields/npe01__Member_Level__c.field-meta.xml
<CustomField>
    <fullName>npe01__Member_Level__c</fullName>
    <description>Used for Membership Opportunities (Record Type)</description>
    <inlineHelpText>Determines the value on the Contact or Account of the Last Membership Level field.</inlineHelpText>
    <label>Member Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
            </value>
            <value>
                <fullName>Artist Foundry</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>